# QtPocsSuite

./: CMakeLists.txt  main.cpp  main.qml
QtPocsSuite/components/pocs/: PocsHeader.qml
QtPocsSuite/concretepocs/: ColouringImage.qml  ColouringMap.qml
QtPocsSuite/concretepocs/VideoStream/: ChooseConcreteVideoStream.qml  HTTP.qml
QtPocsSuiteLib/ColouringImage/: CMakeLists.txt
QtPocsSuiteLib/ColouringImage/headers/: ColouringSupportedDefinitions.h  colouringimagebackend.h  paintingpreview_provider.h
QtPocsSuiteLib/ColouringImage/headers/models/: brushesModel.h
QtPocsSuiteLib/ColouringImage/sources/: colouringimagebackend.cpp  paintingpreview_provider.cpp
QtPocsSuiteLib/ColouringImage/sources/models/: brushesModel.cpp
QtPocsSuiteLib/ColouringMap/: CMakeLists.txt  cmbackend.cpp  cmbackend.h  colouringmapbackend.cpp  colouringmapbackend.h
QtPocsSuiteLib/ColouringMap/headers/: colouringmapbackend.h
QtPocsSuiteLib/ColouringMap/sources/: colouringmapbackend.cpp
utils/: TODO
utils/maps/polygons_definitions/: canvas1.poly  canvas2.poly
